--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   lottie: ^1.4.3
   modal_bottom_sheet: ^2.0.1
   easy_localization: ^3.0.1
+  google_fonts: ^3.0.1
   connectivity_plus: ^2.3.7
 
   # Local cache
